--- a/egoist-functions/package.json
+++ b/egoist-functions/package.json
@@ -6,9 +6,9 @@
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rimraf dist",
-    "prestart": "npm run clean && npm run build",
     "start": "func start",
     "test": "echo \"No tests yet...\"",
+    "dev": "ts-node ./src/functions/monthly.ts",
     "db:pull": "drizzle-kit introspect"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "@types/node": "^20.x",
     "drizzle-kit": "^0.24.2",
     "rimraf": "^5.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.0.0"
   },
   "main": "dist/src/{index.js,functions/*.js}"
