--- a/egoist-functions/package.json
+++ b/egoist-functions/package.json
@@ -6,6 +6,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rimraf dist",
+    "prestart": "npm run clean && npm run build",
     "start": "func start",
     "test": "echo \"No tests yet...\"",
     "dev": "ts-node ./src/functions/monthly.ts",
