--- a/egoist-functions/package.json
+++ b/egoist-functions/package.json
@@ -8,21 +8,17 @@
     "clean": "rimraf dist",
     "prestart": "npm run clean && npm run build",
     "start": "func start",
-    "test": "echo \"No tests yet...\"",
-    "dev": "ts-node ./src/functions/monthly.ts",
-    "db:pull": "drizzle-kit introspect"
+    "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0",
+    "drizzle-kit": "^0.24.2",
     "drizzle-orm": "^0.33.0",
     "mysql2": "^3.11.0"
   },
   "devDependencies": {
+    "@azure/functions": "^3.0.0",
     "@types/node": "^20.x",
-    "drizzle-kit": "^0.24.2",
     "rimraf": "^5.0.0",
-    "ts-node": "^10.9.2",
     "typescript": "^4.0.0"
-  },
-  "main": "dist/src/{index.js,functions/*.js}"
+  }
 }
