--- a/sqs-ffmpeg/package.json
+++ b/sqs-ffmpeg/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.24.2",
     "drizzle-orm": "^0.33.0",
+    "expo-server-sdk": "^3.11.0",
     "mysql2": "^3.11.0",
     "typescript": "^5.5.4"
   },
